truncator bg color fix'd

--- a/client/dashboard/components/truncator/_index.scss
+++ b/client/dashboard/components/truncator/_index.scss
@@ -1,4 +1,3 @@
 .truncator {
     white-space: pre-line;
-    background-color: #000000;    
 }
